--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,30 +1,60 @@
-{% extends "base.html" %}
+<!-- HTML for static distribution bundle build -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Swagger UI</title>
+    <link rel="stylesheet" type="text/css" href="./swagger-ui.css" />
+    <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
+    <style>
+      html
+      {
+        box-sizing: border-box;
+        overflow: -moz-scrollbars-vertical;
+        overflow-y: scroll;
+      }
 
-{% block main %}
-    <div>
-        <h1>API Description</h1>
-        <p>
-            <a>API to get information of one specific User:</a>
-            <br>
-            <a>additional parameters in Format ?legacyAddress=XYZ&signature=SIG&IP=xxx.xxx needed</a>
-            <br>
-            <a href="/api/v2/userInformation?legacyAddress=XYZ&amp;signature=SIG&amp;ip=xxx.xxx">/api/v2/userInformation</a>
-            <br>
-        </p>
-        <p>
-            <a>API to get all Registrations of one specific User</a>
-            <br>
-            <a>additional parameter in Format ?legacyAddress=XYZ&IP=xxx.xxx needed</a>
-            <br>
-            <a href="/api/v2/registrations?legacyAddress=XYZ">/api/v2/registrations</a>
-            <br>
-        </p>
-        <p>
-            <a>API to post new Registration of one specific User:</a>
-            <br>
-            <a>additional parameters in Format ?legacyAddress=XYZ&signature=SIG needed</a>
-            <br>
-            <a href="/api/v2/addRegistration?legacyAddress=XYZ&amp;signature=SIG">/api/v2/addRegistration</a>
-            <br>
-        </p>
-{% endblock %}
+      *,
+      *:before,
+      *:after
+      {
+        box-sizing: inherit;
+      }
+
+      body
+      {
+        margin:0;
+        background: #fafafa;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="swagger-ui"></div>
+
+    <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
+    <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
+    <script>
+    window.onload = function() {
+      // Begin Swagger UI call region
+      const ui = SwaggerUIBundle({
+        url: "C:/Users/Arthur/Desktop/fiat2defiChain/api-fiat2defi/src/templates/swagger.json",
+        dom_id: '#swagger-ui',
+        deepLinking: true,
+        presets: [
+          SwaggerUIBundle.presets.apis,
+          SwaggerUIStandalonePreset
+        ],
+        plugins: [
+          SwaggerUIBundle.plugins.DownloadUrl
+        ],
+        layout: "StandaloneLayout"
+      });
+      // End Swagger UI call region
+
+      window.ui = ui;
+    };
+  </script>
+  </body>
+</html>
