Change Icon and add HTML brackets

--- a/src/shared/assets/mails/new.hbs
+++ b/src/shared/assets/mails/new.hbs
@@ -2,14 +2,10 @@
 <html>
 <body style="background-color:#072440;">
 <center>
-	<img src="https://dfx.swiss/images/dfxsocials/DFX_Logo_156%2C25x100px.png" height="100px" width="156.25px">
+	<img src="https://dfx.swiss/images/dfxsocials/02.03.2022_DFX_Logo_grund_dunkel_1.png" height="100px" width="156.25px">
 	<div style="background-color:#0A355C;color:#FFFFFF;margin:20px;font-family:Open Sans;padding:20px;">
-        <p style="font-family:Open Sans;color:#F5516C;font-weight:800;font-size:32px;">We have arranged the bank transfer</p>
-        {{body}}
-		<p style="font-family:Open Sans">The payment has just left our bank account and will be visible on your bank account shortly<br>In the meantime the bank performances are responsible for the wire transfer duration</p>
-		<p style="font-family:Open Sans">Thank you for using the DFX withdrawal service</p>
-		<p style="font-family:Open Sans">Your DFX Team<br>Bitcoiners by heart ♥</p>
-        <p style="font-family:Open Sans"></p>
+        <p style="font-family:Open Sans;color:#F5516C;font-weight:800;font-size:24px;">{{salutation}}</p>
+        {{{body}}}
 	</div>
       <table>
         <tr>
