--- a/src/shared/assets/mails/default.hbs
+++ b/src/shared/assets/mails/default.hbs
@@ -1,51 +1,93 @@
+<style>
+  html, body, table {
+    background-color: #072440;
+    color: #ffffff;
+    font-family: Open Sans;
+  } 
+  
+  .logo {
+    height: 100px;
+    width: 156.25px;
+  }
+  
+  .salutation {
+    color: #f5516c;
+    font-weight: 800;
+    font-size: 24px;
+  }
+  
+  .social-link {
+    text-decoration: none;
+  }
+
+  .social {
+    height: 40px;
+  }
+  
+  .spacer-h {
+    height: 10px;
+  }
+  
+  .spacer-v {
+    width: 10px;
+  }
+</style>
+
 <html>
-  <body style='background-color:#072440;color:#FFFFFF;margin:20px;font-family:Open Sans;padding:20px;'>
-    <center>
-      <img
-        src='https://dfx.swiss/images/dfxsocials/02.03.2022_DFX_Logo_grund_dunkel_1.png'
-        height='100px'
-        width='156.25px'
-      />
-        <p style='font-family:Open Sans;color:#F5516C;font-weight:800;font-size:24px;'>{{salutation}}</p>
-        {{{body}}}
-      <table>
-        <tr>
-            <center>
-                <td style='max-width: 50px;'>
-                    <a href='{{twitterUrl}}'><img
-                        style='padding:20px;height:30px;width:30px;'
-                        src='https://dfx.swiss/images/dfxsocials/twitter.png'
-                        height='30px'
-                        width='50px'
-                    /></a>
-                </td>
-                <td style='max-width: 50px;'>
-                    <a href='{{telegramUrl}}'><img
-                        style='padding:20px;height:30px;width:30px;'
-                        src='https://dfx.swiss/images/dfxsocials/telegram.png'
-                        height='30px'
-                        width='50px'
-                    /></a>
-                </td>
-                <td style='max-width: 50px;'>
-                    <a href='{{instagramUrl}}'><img
-                        style='padding:20px;height:30px;width:30px;'
-                        src='https://dfx.swiss/images/dfxsocials/instagram.png'
-                        height='30px'
-                        width='50px'
-                    /></a>
-                </td>
-                <td style='max-width: 50px;'>
-                    <a href='{{linkedinUrl}}'><img
-                        style='padding:20px;height:30px;width:30px;'
-                        src='https://dfx.swiss/images/dfxsocials/linkedin.png'
-                        height='30px'
-                        width='50px'
-                    /></a>
-                </td>
-            </center>
-        </tr>
-      </table>
-    </center>
+
+  <body>
+    <table border='0' cellpadding='0' cellspacing='0' width='100%'>
+      <tr>
+        <td align='center'>
+          <img class='logo' src='https://dfx.swiss/images/dfxsocials/02.03.2022_DFX_Logo_grund_dunkel_1.png' />
+        </td>
+      </tr>
+
+      <tr>
+        <td align='center' class='salutation'>{{salutation}}</td>
+      </tr>
+
+      <tr class='spacer-h'></tr>
+
+      <tr>
+        <td align='center'>{{{body}}}</td>
+      </tr>
+
+      <tr>
+        <td align='center'>
+
+          <table>
+            <tr class='spacer-h'></tr>
+            <tr>
+              <td>
+                <a class='social-link' href='{{twitterUrl}}'>
+                  <img class='social' src='https://dfx.swiss/images/dfxsocials/twitter.png' />
+                </a>
+              </td>
+              <td class='spacer-v'></td>
+              <td>
+                <a class='social-link' href='{{telegramUrl}}'>
+                  <img class='social' src='https://dfx.swiss/images/dfxsocials/telegram.png' />
+                </a>
+              </td>
+              <td class='spacer-v'></td>
+              <td>
+                <a class='social-link' href='{{instagramUrl}}'>
+                  <img class='social' src='https://dfx.swiss/images/dfxsocials/instagram.png' />
+                </a>
+              </td>
+              <td class='spacer-v'></td>
+              <td>
+                <a class='social-link' href='{{linkedinUrl}}'>
+                  <img class='social' src='https://dfx.swiss/images/dfxsocials/linkedin.png' />
+                </a>
+              </td>
+            </tr>
+            <tr class='spacer-h'></tr>
+          </table>
+        </td>
+      </tr>
+    </table>
   </body>
+
 </html>
