Add mail intervall Add stakingRefMail

--- a/src/shared/assets/mails/default.hbs
+++ b/src/shared/assets/mails/default.hbs
@@ -21,7 +21,7 @@
   }
 
   .social {
-    height: 40px;
+    height: 15px;
   }
   
   .spacer-h {
@@ -39,7 +39,7 @@
     <table border='0' cellpadding='0' cellspacing='0' width='100%'>
       <tr>
         <td align='center'>
-          <img class='logo' src='https://dfx.swiss/images/dfxsocials/02.03.2022_DFX_Logo_grund_dunkel_1.png' />
+          <img class='logo' src='https://dfx.swiss/images/dfxsocials/DFX_Logo_Hintergrund_Dunkel.png' />
         </td>
       </tr>
 
