Refactoring mail style default font-family:Open Sans,Helvetica,Arial,sans-serif;

--- a/src/shared/assets/mails/default.hbs
+++ b/src/shared/assets/mails/default.hbs
@@ -2,7 +2,7 @@
   html, body, table {
     background-color: #072440;
     color: #ffffff;
-    font-family: Open Sans;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
   } 
   
   .logo {
