--- a/src/shared/assets/mails/personal-mail.hbs
+++ b/src/shared/assets/mails/personal-mail.hbs
@@ -1,5 +1,3 @@
-<h1>{{salutation}}</h1>
 <p>{{{body}}}</p>
 <p></p>
-<p><img src={{{banner}}} height='100px' width='200px' /></p>
-<p>{{date}} DFX AG</p>
+<p><img src={{{banner}}} height=150px width=auto /></p>
